# Poe_Bot_Crawler

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: daily-crawler.yml
output/bots/: bot_1008_2025-03-10.json  bot_1008_2025-03-12.json  bot_1011_2025-03-10.json  bot_1011_2025-03-14.json  bot_1011_2025-03-17.json  bot_1011_2025-03-18.json  bot_1011_2025-03-22.json  bot_1011_2025-03-27.json  bot_1011_2025-03-28.json  bot_1011_2025-03-29.json  bot_1011_2025-04-01.json  bot_1011_2025-04-07.json  bot_1011_2025-04-08.json  bot_1011_2025-04-11.json  bot_1011_2025-04-15.json  bot_1011_2025-04-20.json  bot_1011_2025-04-22.json  bot_1011_2025-04-28.json  bot_1011_2025-05-01.json  bot_1011_2025-05-06.json  bot_1011_2025-05-07.json  bot_1011_2025-05-09.json  bot_1011_2025-05-18.json  bot_1011_2025-06-18.json  bot_1011_2025-06-19.json  bot_1011_2025-06-27.json  bot_1011_2025-07-06.json  bot_1011_2025-07-18.json  bot_1012_2025-03-11.json  bot_1012_2025-03-14.json  bot_1012_2025-03-15.json  bot_1012_2025-03-18.json  bot_1012_2025-03-23.json  bot_1012_2025-03-25.json  bot_1012_2025-03-28.json  bot_1012_2025-03-29.json  bot_1012_2025-04-01.json  bot_1012_2025-04-06.json  bot_1012_2025-04-08.json  bot_1012_2025-04-13.json  (+2250 more)
output/json/: official_bots_list_2025-03-10.json  official_bots_list_2025-03-11.json  official_bots_list_2025-03-12.json  official_bots_list_2025-03-14.json  (+398 more)
src/: __init__.py  bot_details.py  bot_info_generator.py  bot_list.py  html_generator.py  main.py  maintenance.py  test_bot_info.py  timeline_generator.py  utils.py
(+316 files in other folders)
